[~] footer: corrected conviction mobile version

--- a/css/footer.css
+++ b/css/footer.css
@@ -46,10 +46,45 @@
 
 }
 
+@media (max-width: 500px) {
+    #crooked-box {
+        border: 1px rgb(147, 128, 122) solid;
+        -webkit-transform: rotate(-15deg);
+        -moz-transform: rotate(-15deg);
+        -o-transform: rotate(-15deg);
+        -ms-transform: rotate(-15deg);
+        transform: rotate(-15deg);
+        padding-bottom: 40px;
+        padding-right: 20px;
+        width: 85%;
+        display: table;
+        margin: 0 auto;
+        margin-left: 40px !important;
+    }
+
+    #conviction-list {
+        font-size: 2.6vw;
+    }
+}
+
+
+
 @media (max-width: 767px) {
     #DEC-footer {
         display: block;
         margin: 40px auto 0 auto;
+    }
+
+    #footer {
+        padding-left: 15px !important;
+    }
+
+    #bottom-footer-title {
+        font-size: 4.2vw !important;
+    }
+
+    #col-graph-footer {
+        padding-left: 20px !important;
     }
 }
 
